# openklip

./: .gitignore  .jscpd.json  AGENTS.md  AGENT_NATIVE_EDITOR_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  MVP_ACCEPTANCE.md  README.md  TODO.md  VERSION  biome.jsonc  components.json  knip.json  next.config.ts  node_modules  package.json  tsconfig.json  vercel.json
.claude/: launch.json
.cursor/: mcp.json
app/: actions.ts  agent-actions.ts  editor-tokens.css  error.tsx  fonts.ts  globals.css  layout.tsx  loading.tsx  page.tsx  theme-base.css
brands/: cinematic.json  default.json
docs/: EXTERNAL-INSPIRATION.md  RELEASE-NOTES.md  REPO-TOPICS.md  acceptance-corpus-manifest.md  acceptance-corpus.md  desktop-packaging-runbook.md
graphics/: AUTHORING.md
luts/: README.md  identity.cube
scripts/: acceptance-corpus.ts  acceptance-gate.ts  agent-demo.ts  agent-make-highlights.ts  agent-make-short.ts  agent-smoke-audit.ts  cam-devex-smoke.ts  example-phrases.txt  generate-multicam-fixture.ts  generate-shader-templates.ts  prepare-desktop-bundle.ts  record-demo-gif.sh  release-desktop.ts  sign-desktop-bundle.sh  verify-macos-signature.sh  warm-models.mjs
skills/: README.md
src/: action-log-entry.ts  action-log.ts  actions.ts  agent-driver.ts  agent-run-registry.ts  agent-smoke-audit.ts  agent-task-types.ts  agent-tasks.ts  agent-tools.ts  assembly-plan.ts  assembly.ts  asset-cards.ts  asset-filenames.ts  asset-lock.ts  asset-scanner.ts  assets.ts  async-pool.ts  audio-analysis-core.ts  audio-analysis.ts  audio-measure.ts  auto-crop.ts  blank-ingest.ts  bpm-core.ts  bpm.ts  brands.ts  brief-log.ts  brief.ts  broll-audio.ts  broll-display.ts  broll-rank.ts  broll-suggest.ts  broll.ts  call-cli.ts  cam-activity.ts  cam-automix.ts  cam-devex-smoke.ts  cam-mix.ts  cam-plan.ts  cam-remix.ts  cams.ts  (+118 more)
src-tauri/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: main.rs
(+827 files in other folders)
