[package]
name = "openklip-desktop"
version = "0.44.0"
description = "OpenKlip desktop shell"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# In-app auto-update (CRAFT-6266). Driven entirely from Rust (the webview loads
# a remote localhost URL, so no JS/capabilities wiring): check a GitHub Releases
# feed on launch, and on confirm download + install + relaunch. `dialog` is the
# native confirm prompt; the endpoint + pubkey live in tauri.conf.json.
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# Build scripts and proc-macro crates (e.g. tauri_macros) are host tools that
# rustc loads as dylibs at compile time. Inheriting the aggressive release
# settings above — LTO, codegen-units = 1, and especially strip = true — can
# produce proc-macro dylibs rustc then fails to load ("can't find crate for
# `tauri_macros`"), which broke `tauri build --release` intermittently. This
# override compiles those host artifacts with plain, unstripped settings; it
# does not affect the shipped binary's optimization, only the build tools.
[profile.release.build-override]
opt-level = 0
codegen-units = 16
strip = false
